syntax = "proto3";

option csharp_namespace = "grpcInvoiceClient";

package invoices;

service Invoice {

  rpc SendCreateInvoice(InvoiceCreateRequest) returns (stream InvoiceCreateResponse);  //Server stream olacağı için return tipini stream olarak belirliyoruz.
}

message InvoiceCreateRequest {
  string name = 1;
  string description=2;
  string no=3;
}

message InvoiceCreateResponse {
  string invoice = 1;
}
